--- a/AGDPMS.Web/Components/Inventory/Inventory.razor
+++ b/AGDPMS.Web/Components/Inventory/Inventory.razor
@@ -26,44 +26,57 @@
 </div>
 
 <div class="mb-3">
-    <input type="search" class="form-control" placeholder="Tìm kiếm theo tên dự án, địa điểm, khách hàng..."
+    <input type="search" class="form-control" placeholder="Tìm kiếm theo mã hoặc tên"
            value="@searchTerm" @oninput="DebounceSearch" />
 </div>
 
 <div class="card">
-    <h5 class="card-header">Danh sách Dự án RFQ</h5>
+    <h5 class="card-header">Danh sách vật tư</h5>
     <div class="table-responsive text-nowrap">
         @if (isLoading)
         {
             <div class="p-3">Đang tải dự án...</div>
         }
-        else if (materials == null || !materials.Any())
+        @if (materials == null || !materials.Any())
         {
-            <div class="p-3">Không tìm thấy dự án nào.</div>
+            <div class="p-3">Không tìm thấy vật tư nào.</div>
+        }
+        @if (loadError)
+        {
+            <div class="p-3">Lỗi tải dự án</div>
+            <div class="p-3">@result.ErrorMessage</div>
         }
         else
         {
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>Type</th>
-                        <th>Stock</th>
-                        <th>Weight</th>
-                        <th>Quantity</th>
+                        <th>Mã</th>
+                        <th>Tên</th>
+                        <th>Loại vật tư</th>
+                        @* <th>Kg/m</th> *@
+                        <th>Kích thước</th>
+                        <th>Số lượng</th>
+                        <th>Giá</th>
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
                     @foreach(Material m in items)
                     {
-                        <tr>
+                        <tr rowspan="@m.Stock.Count()">
                             <td>@m.Id</td>
                             <td>@m.Name</td>
                             <td>@m.Type.Name</td>
-                            <td>@m.Stock</td>
-                            <td>@m.Weight</td>
-                            <td>@m.Thickness</td>
+                            @* <td>@m.Stock</td> *@
+                            @* <td>@m.Weight</td> *@
+                            @foreach(MaterialStock ms in m.Stock)
+                            {
+                                <tr>
+                                    <td>@ms.Length</td>
+                                    <td>@ms.Stock</td>
+                                    <td>@ms.BasePrice</td>
+                                </tr>
+                            }
                         </tr>
                     }
                 </tbody>
@@ -75,6 +88,8 @@
 <hr />
 
 @code {
+    private GetMaterialResult result = null;
+    private bool loadError = false;
     private bool isLoading = true;
     private string searchTerm = string.Empty;
     private IEnumerable<Material> materials = new List<Material> { };
@@ -87,13 +102,17 @@
     {
         isLoading = true;
 
-        GetMaterialResult result = await inventoryService.GetMaterial();
+        result = await inventoryService.GetMaterial();
         if (result.Success)
         {
             materials = result.Materials;
             items = materials.ToArray();
-            isLoading = false;
         }
+        else
+        {
+            loadError = true;
+        }
+        isLoading = false;
         StateHasChanged();
     }
 
