--- a/AGDPMS.Shared/Components/_Imports.razor
+++ b/AGDPMS.Shared/Components/_Imports.razor
@@ -6,3 +6,4 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using AGDPMS.Shared.Components.Production.Stages
