edit fields for material weight and stock base price

--- a/AGDPMS.Shared/Components/Projects/SelectWStarCavitiesModal.razor
+++ b/AGDPMS.Shared/Components/Projects/SelectWStarCavitiesModal.razor
@@ -2,7 +2,7 @@
 @using System.Text.RegularExpressions
 
 <div class="modal fade" id="@ModalId" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
+    <div class="modal-dialog modal-dialog-scrollable modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Chọn cửa từ thiết kế Window Star</h5>
