--- a/AGDPMS.Web/Components/Account/Pages/AccountList.razor
+++ b/AGDPMS.Web/Components/Account/Pages/AccountList.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Identity
 @using System.ComponentModel.DataAnnotations
 
-@attribute [Authorize(Roles = "Admin")]
+@attribute [Authorize(Roles = "Director")]
 
 @inject UserDataAccess UserDataAccess
 @inject RoleDataAccess RoleDataAccess
